update BE & FE ros watch